Prevent landing image from flickering image-cover will cause the img to flicker. Changed to background: url() to prevent.

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,8 @@
 body {
     @apply bg-background;
 }
+
+/* Gotta put it here to prevent flickering. I'm a perfectionist! */
+.landingImage {
+    background: url("assets/landing.jpeg") center / cover;
+}
